crates/kay-tools/tests/snapshots/events_wire_snapshots__snap_text_delta.snap
---
source: crates/kay-tools/tests/events_wire_snapshots.rs
expression: wire_value(&ev)
---
{
  "content": "Hello, world!",
  "type": "text_delta"
}
