crates/kay-tools/tests/snapshots/events_wire_snapshots__snap_tool_call_delta.snap
---
source: crates/kay-tools/tests/events_wire_snapshots.rs
expression: wire_value(&ev)
---
{
  "arguments_delta": "{\"cmd\":\"ls\"}",
  "id": "call_01",
  "type": "tool_call_delta"
}
