crates/kay-tools/tests/snapshots/events_wire_snapshots__snap_tool_output_stderr.snap
---
source: crates/kay-tools/tests/events_wire_snapshots.rs
expression: wire_value(&ev)
---
{
  "call_id": "call_01",
  "chunk": {
    "data": "warning: unused variable\n",
    "kind": "stderr"
  },
  "type": "tool_output"
}
